--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,34 +1,39 @@
-
 .header-menu {
   display: none;
 }
 
-@media screen and (max-width:513px){
-  .logo{
-    float: none;
-    height: 72px;
-    width: auto;
-    margin-right: 1em;
+@media screen and (max-width:325px) {
+  .header-menu {
+    margin-left: 0;
   }
-  .header-title{
-    float: none;
-    display: inline-block;
-    margin: 10px;
+}
+
+@media screen and (max-width:403px) {
+  .header-menu {
+    margin-left: auto;
+  }
+}
+
+@media screen and (max-width:450px) {
+  .logo {
+    height: 72px;
+  }
+  .header-title {
     font-size: 1em;
   }
+}
 
-  .nav{
+@media screen and (max-width:513px) {
+  .nav {
     z-index: 15;
     width: 300px;
     position: absolute;
-    transform: translate(-300px,0);
+    transform: translate(-300px, 0);
     transition: transform 0.3s ease;
   }
-
   .nav.open {
-    transform: translate(0,0);
+    transform: translate(0, 0);
   }
-
   .menu {
     display: list-item;
     border-bottom: 1px solid #E0E0E0;
@@ -36,17 +41,13 @@
     text-align: left;
     color: black;
   }
-
-  .nav a:hover{
+  .nav a:hover {
     background-color: rgb(62, 88, 182);
   }
   .header-menu {
-    display: inline-block;
-    position: absolute;
-    right: 0;
+    display: block;
     padding: 1em;
   }
-
   .header-menu svg {
     width: 32px;
     fill: #E0E0E0;
@@ -54,50 +55,35 @@
 }
 
 @media screen and (max-width:600px) {
-  .logo{
-    float: none;
-    height: 80px;
-    width: auto;
-    margin-right: 1em;
-  }
-  .header-title{
-    float: none;
-    display: inline-block;
-    margin: 0;
-  }
-
-  .about h2{
+  .about h2 {
     font-size: 2em;
     padding: 5px;
   }
-
   .about-me {
-    padding: 5px;
-    text-align: justify;
+    padding: 2px;
     line-height: 1em;
   }
-
-  .about-me p{
-    margin: 10px;;
+  .about-me p {
+    margin: 10px;
+    ;
   }
 }
 
 @media screen and (min-width:601px) {
-  .about h2{
+  .about h2 {
     font-size: 2em;
     padding: 5px;
   }
-
   .about-me {
     padding: 5px;
     text-align: justify;
     line-height: 1em;
   }
-
-  .about-me p{
-    margin: 10px;;
+  .about-me p {
+    margin: 10px;
+    ;
   }
-  .project{
+  .project {
     width: 48%;
     order: 1;
   }
@@ -119,10 +105,20 @@
 }
 
 @media screen and (min-width:1320px) {
-  .project{
+  .project {
     width: 23%;
   }
   .project-title {
     font-size: 1.3em;
+  }
+}
+
+@media screen and (max-width:540px) {  
+  .fa {
+    padding: 12px;
+    font-size: 30px;
+    width: 30px;
+    background-color: #1a1a1d;
+    color: white;
   }
 }
